Bugfix: use more accessible color contrasts in footer

--- a/sites/all/themes/mcneese_www/css/screen/screen-www-common.css
+++ b/sites/all/themes/mcneese_www/css/screen/screen-www-common.css
@@ -28,7 +28,7 @@
   line-height: 15px;
 
   color: #303030;
-  background-color: #c6cedb;
+  background-color: #d8dde6;
 
   background-image: url(../../images/footer-full.png);
   background-repeat: no-repeat;
